# jamsession

./: .gitignore  CLAUDE.md  Cargo.toml  Prompt-2026-05-15.md  README.md  book.toml  deny.toml
.github/workflows/: audit.yml  ci.yml  mdbook.yml  release-plz.yml  release.yml  rust-next.yml
.specify/: feature.json
md/: README.md  SUMMARY.md  configuration.md  quickstart.md
md/design/: README.md  daemon_actor.md  flow-agent-crash.md  flow-cwd-health.md  flow-idle-spindown.md  flow-message-bridge.md  flow-message-trace.md  flow-new-session.md  flow-reconnect.md  sequence_diagrams.md
md/rfds/: accepted.md  completed.md
md/rfds/TEMPLATE/: README.md
md/rfds/message-trace/: README.md
md/rfds/rfd-process/: README.md
md/rfds/session-persistence/: README.md
specs/001-agent-daemon/: tasks.md
specs/004-integration-test-harness/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-integration-test-harness/checklists/: requirements.md
specs/004-integration-test-harness/contracts/: agent-factory.md  test-daemon-api.md
specs/005-message-trace/: spec.md
src/: agent.rs  bridge.rs  daemon.rs  error.rs  guidelines.md  lib.rs  main.rs  session.rs  state.rs
src/jamsession/: CHANGELOG.md  Cargo.toml
src/jamsession-mdbook/: CHANGELOG.md  Cargo.toml
src/jamsession-mdbook/src/: main.rs
src/jamsession-test/: Cargo.toml
src/jamsession-test/src/: lib.rs  transport.rs
src/jamsession-test/tests/: daemon_startup.rs  integration.rs  live_agent.rs  session_lifecycle.rs
src/jamsession/src/: actor.rs  agent.rs  config.rs  daemon.rs  db.rs  debug.rs  dispatcher.rs  eof_signal.rs  error.rs  lib.rs  logging.rs  main.rs  session.rs  state.rs
src/jamsession/tests/: session_lifecycle.rs
src/scope-tasks/: Cargo.toml
src/scope-tasks/src/: lib.rs
tests/: daemon_startup.rs  session_lifecycle.rs
xtask/: Cargo.toml
xtask/src/: main.rs
