[package]
name = "academy"
version = "0.1.0"
edition = "2024"

[dependencies]
acpr = "0.4.0"
agent-client-protocol = "0.13.1"
chrono = { version = "0.4.44", features = ["serde"] }
dirs = "6.0.0"
nix = { version = "0.31.3", features = ["signal", "process"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["compat"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
uuid = { version = "1.23.2", features = ["v4"] }

[dev-dependencies]
tempfile = "3.27.0"
