[package]
name = "jamsession-mdbook"
version = "0.1.0"
edition = "2024"
description = "mdbook preprocessor for anchor references into source code"
license = "MIT OR Apache-2.0"

[[bin]]
name = "mdbook-anchor"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
mdbook-preprocessor = "0.5"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2.5"
