[package]
name = "scope-tasks"
version = "0.1.0"
edition = "2024"
description = "Lightweight structured-concurrency: scoped concurrent task runner"
license = "MIT OR Apache-2.0"

[dependencies]
futures = "0.3"
tokio = { version = "1", features = ["sync", "macros", "rt"] }
tokio-stream = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
